# OOP_Python_program

./: .env.example  .gitignore  README.md  main.py  main_lesson1.py  pyproject.toml
htmlcov/: .gitignore  class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_category_py.html  z_145eef247bfb46b6_products_py.html  z_145eef247bfb46b6_utils_py.html
src/: category.py  products.py
tests/: conftest.py  test_category.py  test_products.py
